<resources>
    <string name="app_name">Exercice5_Audrey Dongmo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="best">Best</string>
    <string name="selection">Selection</string>
    <string name="bame_basket">Sneakers-basketball</string>
    <string name="jumpman">Nike-jumpman</string>
    <string name="air_max">Nike-air-max</string>
    <string name="marque">nike</string>
    <string name="prix_j">18 000</string>
    <string name="prix_a">20 000</string>
    <string name="monaie"> Fcfa</string>
    <string name="title">Flamesh.</string>







</resources>
